more tests, adding kotlin mock engine